+++++++++++
Python News
+++++++++++

What's New in Python 2.7.9?
==========================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------


What's New in Python 2.7.8?
===========================

*Release date: 2014-06-29*

Core and Builtins
-----------------

- Issue #4346: In PyObject_CallMethod and PyObject_CallMethodObjArgs, don't
  overwrite the error set in PyObject_GetAttr.

- Issue #21831: Avoid integer overflow when large sizes and offsets are given to
  the buffer type.

- Issue #1856: Avoid crashes and lockups when daemon threads run while the
  interpreter is shutting down; instead, these threads are now killed when they
  try to take the GIL.

- Issue #19656: Running Python with the -3 option now also warns about
  non-ascii bytes literals.

- Issue #21642: If the conditional if-else expression, allow an integer written
  with no space between itself and the ``else`` keyword (e.g. ``True if 42else
  False``) to be valid syntax.

- Issue #21523: Fix over-pessimistic computation of the stack effect of
  some opcodes in the compiler.  This also fixes a quadratic compilation
  time issue noticeable when compiling code with a large number of "and"
  and "or" operators.

Library
-------

- Issue #21652: Prevent mimetypes.type_map from containing unicode keys on
  Windows.

- Issue #21729: Used the "with" statement in the dbm.dumb module to ensure
  files closing.

- Issue #21672: Fix the behavior of ntpath.join on UNC-style paths.

- Issue #19145:  The times argument for itertools.repeat now handles
  negative values the same way for keyword arguments as it does for
  positional arguments.

- Issue #21832:  Require named tuple inputs to be exact strings.

- Issue #8343:  Named group error messages in the re module did not show
  the name of the erroneous group.

- Issue #21491: SocketServer: Fix a race condition in child processes reaping.

- Issue #21635:  The difflib SequenceMatcher.get_matching_blocks() method